syntax = "proto3";
package df_interface;
option go_package = "Betterfly2/proto/data_forwarding";

import "data_forwarding/common.proto";

message LoginReq {
  string account = 1;
  string password = 2;
}

message SignupReq {
  string account = 1;
  string password = 2;
  string user_name = 3;
}

message LogoutReq {
}

message QueryUser {
  int64 from_user_id = 1;
  int64 to_query_user_id = 2;
}

message InsertContact {
  int64 from_user_id = 1;
  int64 to_insert_user_id = 2;
}

message QueryGroup {
  int64 from_user_id = 1;
  int64 to_query_group_id = 2;
  bool client_need_save = 3; // 对于原先的msg字段, 0保存，1不保存
}

message InsertGroup {
  int64 from_user_id = 1;
  int64 to_be_created_group_id = 2;
  string to_be_created_group_name = 3;
}

message InsertGroupUser { // 又名：加入群组
  int64 from_user_id = 1;
  int64 target_group_id = 2;
}

// 文件上传/下载请求
message FileRequest {
  int64 from_user_id = 1;
  string file_hash = 2; // SHA512
  string file_suffix = 3; // 文件后缀
  FileOperation operation = 4; // 0上传，1下载
}

message UpdateAvatar {
  int64 target_id = 1; // 被修改头像的用户/群组id
  string avatar_hash = 2; // 通过hash可以找到文件
  bool is_group = 3; // 用于标识是否为群组
}

// 查询单条消息
message QueryMessage {
  int64 message_id = 1;
}

// 同步消息（查询某个时间点之后的消息）
message QuerySyncMessages {
  int64 to_user_id = 1;
  string timestamp = 2;
}

// 更新用户名
message UpdateUserName {
  int64 user_id = 1;
  string new_user_name = 2;
}

// 更新用户头像URL
message UpdateUserAvatar {
  int64 user_id = 1;
  string new_avatar_url = 2;
}
